survey-salesforce/salesforce-app/src/objects/ContactGroupSurveyAssignment__c.object
<CustomObject>
    <description>Junction object for many to many relationship between Survey and Contact Group objects</description>
    <fields>
        <fullName>ContactGroup__c</fullName>
        <label>Contact Group</label>
        <referenceTo>ContactGroup__c</referenceTo>
        <relationshipName>ContactGroupSurveyAssignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DatePublishedToThisGroup__c</fullName>
        <description>Same as created date but with a custom label</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Published to this Group</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Contact Group Survey Assignment</relationshipLabel>
        <relationshipName>Contact_Group_Survey_Assignment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assigned Survey</label>
    <nameField>
        <displayFormat>CGSA-{00000000}</displayFormat>
        <label>Contact Group Survey Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>